2005-12-19 Kevin
* Update z_catalog_stock_list ZSQL method to follow Seb's changes.
* Add Baobab_getPortalReferenceCurrencyID script to get the default currency.
* Change reference to getPortalReferenceCurrencyID portal method. Use Baobab_getPortalReferenceCurrencyID instead.

2005-12-14 Kevin
* Add a hack in Baobab_getUserAssignmentList to support old and new person module id.

2005-12-13 Kevin
* Add CashDelivery document.
* Clean portal_classes.

2005-12-12 Kevin
* Change the acquisition_portal_type_list attribute on base category 'site' from "'[]'" to "python: []".
* Delete deprecated ERP5Type_initLocalRoleMapping_* objects.

2005-12-08 Kevin
* Delete custom version of ERP5Type_getSecurityCategoryFromAssignment. Move it to erp5_core.
* Update z_catalog_stock_list to v1.10.

2005-12-07 Kevin
* Move CashDetail_loadScript_example, Container_fastInputUpdate, Container_getContaineeTotalPrice, CounterModule_getVaultTransactionList, ImportCsvToCategories to erp5_baobab_config because they contain reference to the local currency.
* Add a custom version of ERP5Type_getSecurityCategoryFromAssignment to filter the category list and not include categories saved by Business Templates. This customisation must be removed when bug #124 will be corrected.

2005-11-15 Kevin
* Use getCategoryChildTitleOrIdItemList on cash_currency views

2005-11-07 Kevin
* Add portal_assignment_base_category_list.
* Delete custom Person_updateUserSecurityGroup script.
* Delete z_catalog_item, z_catalog_movement and z_catalog_stock Zsql custom methods.
* Mark ERP5Type_initLocalRoleMapping scripts as deprecated.
* Delete ListBox_initializeFakeContent, MakeCellNoEditable, OLD_Baobab_asGroupId, OLD_Baobab_assignLocalRole, OLD_CashDetail_CreateCell, OLD_CashDetail_fastInputSave, OLD_Person_getGroupIdList, Value_ifNone, getSiteList.

2005-11-02 Kevin
* Delete validateAndAssignConfirmUserAction script in check_workflow.
* Recreate all check_workflow scripts to force zope recreate a goud _filepath value.