@@ -1,7 +1,4 @@
 cash_status
 emission_letter
-function
-group
-site
 variation
 vault_type
